fix text cutoff on small devices

--- a/source/scss/form/elements/_group.scss
+++ b/source/scss/form/elements/_group.scss
@@ -14,6 +14,8 @@
 @import "../../color";
 
 .form-group {
+  display: flex;
+  align-items: center;
   margin-bottom: 10px;
   padding: 7px 20px;
 
