--- a/source/scss/form/elements/_label.scss
+++ b/source/scss/form/elements/_label.scss
@@ -17,6 +17,5 @@
   font-family: Lato;
   font-weight: 400;
   color: $label-color;
-  width: 15%;
   font-size: 1.125em; //18/16
 }
